# coding-for-economists

./: .buildinfo  README.md  auto-research-outputs.html  code-advanced.html  code-advcd-best-practice.html  code-basics.html  code-best-practice.html  code-preliminaries.html  code-where.html  coming-from-excel.html  coming-from-matlab.html  coming-from-r.html  coming-from-stata.html  data-advanced.html  data-analysis-quickstart.html  data-exploratory-analysis.ipynb  data-extraction.html  data-intro.html  data-read-and-write.html  data-sharing.html  econmt-causal-inference.html  econmt-probability-random.html  econmt-regression.html  econmt-statistics.html  econmt-statistics.ipynb  env_setup.sh  genindex.html  geo-intro.html  geo-intro.ipynb  geo-vis.html  intro.html  maths-maths-coding.html  objects.inv  pyproject.toml  search.html  searchindex.js  text-intro.html  text-nlp.html  text-nlp.ipynb  text-regex.html  (+16 more)
_sources/: auto-research-outputs.ipynb  code-advanced.ipynb  code-basics.ipynb  code-best-practice.ipynb  code-where.ipynb  coming-from-excel.ipynb  coming-from-matlab.ipynb  coming-from-r.ipynb  coming-from-stata.ipynb  data-advanced.ipynb  data-analysis-quickstart.ipynb  data-extraction.ipynb  data-intro.ipynb  data-read-and-write.ipynb  data-sharing.ipynb  econmt-probability-random.ipynb  econmt-regression.ipynb  econmt-statistics.ipynb  maths-maths-coding.ipynb  text-intro.ipynb  text-nlp.ipynb  time-fcasts-env.ipynb  time-intro.ipynb  vis-common-plots.ipynb  vis-intro.ipynb  vis-narrative.ipynb  wrkflow-advcd-best-practice.ipynb  wrkflow-best-practice.ipynb  wrkflow-command-line.ipynb  wrkflow-rap.ipynb  wrkflow-research-outputs.ipynb  zreferences.ipynb
