[tool.poetry]
name = "coding-for-economists"
version = "0.1.0"
description = "a guide for economists on what programming is, why it’s useful, and how to do it."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.10"
geopandas = "^0.9.0"
jupyter = "^1.0.0"
pandas = "^1.3.3"
matplotlib = "^3.4.3"
statsmodels = "^0.12.2"
seaborn = "^0.11.2"
jupyter-book = "^0.11.3"
scikit-learn = "^1.0"
plotnine = "^0.8.0"
altair = "^4.1.0"
arrow = "^1.1.1"
pre-commit = "^2.15.0"
nbstripout = "^0.5.0"
black = "^21.9b0"
black-nb = "^0.5.0"
gif = "^3.0.0"
pygifsicle = "^1.0.4"
imageio = "^2.9.0"
textstat = "^0.7.2"
spacy = "^3.1.3"
matplotlib-scalebar = "^0.7.2"
fastcore = "^1.3.26"
loguru = "^0.5.3"
icecream = "^2.1.1"
dataprep = "^0.3.0"
pandas-profiling = "^3.1.0"
python-slugify = "^5.0.2"
pyinstrument = "^4.0.3"
pytest = "^6.2.5"
folium = "^0.12.1"
colorcet = "^2.0.6"
geopy = "^2.2.0"
linearmodels = "^4.24"
stargazer = "^0.0.5"
dagit = "^0.12.12"
dagster = "^0.12.12"
Cerberus = "^1.3.4"
pydantic = "^1.8.2"
great-expectations = "^0.13.36"
pandera = "^0.7.2"
"pdfminer.six" = "^20201018"
pingouin = "^0.4.0"
datatable = "^1.0.0"
joypy = "^0.2.5"
jaxlib = "^0.1.71"
jax = "^0.2.21"
twopiece = "^1.2.0"
holoviews = "^1.14.6"
pywaffle = "^0.6.3"
matplotlib-venn = "^0.11.6"
waterfallcharts = "^3.8"
vega-datasets = "^0.9.0"
sympy = "^1.8"
pandas-datareader = "^0.10.0"
networkx = "^2.6.3"
ghp-import = "^2.0.2"
specification-curve = "^0.2.6"
nltk = "^3.6.3"
autopep8 = "^1.5.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
